--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,8 @@
 
 
 
-<h1>About us</h1>
+<h1>About me</h1>
 <p>We are working on out onemonthrails pinteresting app!</p>
+<p>I have been having a ton working on this project this week. I am hoping by next week I can have this app fully functional. Learning computer programming has been a tough journey for me so far, but I feel my passion for it will continue to drive me.</p>
+<p>I aim to become a web developer by the end of the summer. One month rails has been helping me out a lot to fullfil that dream. I also practice different coding langauges on codecademy and code school to sharpen my skills</p>
+<p>I have a lot to learn, but I think I am on the right track!</p>
