--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
 $body-bg:        #d35400;
-$navbar-inverse-bg:      #e67e22;
-$navbar-inverse-link-color:   #9b59b6;
+$navbar-default-bg:      #e67e22;
+$font-family-sans-serif: 'Lato', sans-serif;
+$navbar-default-link-color:   #ecf0f1;
 $brand-primary: #2980b9;
 $jumbotron-bg: #f39c12;
 @import 'bootstrap';
+.center {
+     text-align: center;
+}
