--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,13 @@
 <body>
 <%= render 'layouts/header' %>
 
+  <% flash.each do |name,msg|%>
+     <%= content_tag(:div, msg, class: "alert alert-info") %>
+
+<% end %>
+
+
+</div>
+
 </body>
 </html>
